force-app/main/default/objects/SpecialCalculationPattern__c/SpecialCalculationPattern__c.object-meta.xml
<CustomObject>
    <description>特殊計算の組み合わせを定義する。</description>
    <label>特殊計算パターン</label>
    <nameField>
        <displayFormat>SCP-{0000}</displayFormat>
        <label>特殊計算パターン番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>