force-app/main/default/objects/SpecialCalculationPattern__c/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <description>S：施設、M：水環境、K：官需</description>
    <label>BU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BU</valueSetName>
    </valueSet>
</CustomField>