force-app/main/default/objects/SpecialCalculationPattern__c/fields/CalculationCategory__c.field-meta.xml
<CustomField>
    <fullName>CalculationCategory__c</fullName>
    <label>計算区分</label>
    <length>2</length>
    <type>Text</type>
</CustomField>