force-app/main/default/objects/SpecialCalculationPattern__c/fields/DevSandID__c.field-meta.xml
<CustomField>
    <fullName>DevSandID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>開発時レコードID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>