force-app/main/default/objects/SpecialCalculationPattern__c/fields/MajorClassificationCode__c.field-meta.xml
<CustomField>
    <fullName>MajorClassificationCode__c</fullName>
    <label>大分類コード</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>