force-app/main/default/objects/SpecialCalculationPattern__c/fields/Name4__c.field-meta.xml
<CustomField>
    <fullName>Name4__c</fullName>
    <label>名称4</label>
    <length>100</length>
    <type>Text</type>
</CustomField>