force-app/main/default/objects/SpecialCalculationPattern__c/fields/Name5__c.field-meta.xml
<CustomField>
    <fullName>Name5__c</fullName>
    <label>名称5</label>
    <length>100</length>
    <type>Text</type>
</CustomField>