force-app/main/default/objects/SpecialCalculationPattern__c/fields/No__c.field-meta.xml
<CustomField>
    <fullName>No__c</fullName>
    <description>組み合わせパターン表のNo</description>
    <label>No</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>