force-app/main/default/objects/SpecialCalculationPattern__c/fields/SpecialCalculationTitle__c.field-meta.xml
<CustomField>
    <fullName>SpecialCalculationTitle__c</fullName>
    <label>特殊計算表タイトル</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SpecialCalculationTitle</valueSetName>
    </valueSet>
</CustomField>