force-app/main/default/objects/SpecialCalculationPattern__c/fields/SpecialSpecification__c.field-meta.xml
<CustomField>
    <fullName>SpecialSpecification__c</fullName>
    <label>特殊仕様</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SpecialSpecification</valueSetName>
    </valueSet>
</CustomField>