force-app/main/default/objects/SpecialCalculationPattern__c/fields/SpecialSpecificationNo__c.field-meta.xml
<CustomField>
    <fullName>SpecialSpecificationNo__c</fullName>
    <label>特殊仕様No</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>