force-app/main/default/objects/SpecialCalculationPattern__c/fields/Specification10DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>Specification10DisplayOrder__c</fullName>
    <label>名称10表示順</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>