force-app/main/default/objects/SpecialCalculationPattern__c/fields/Specification1DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>Specification1DisplayOrder__c</fullName>
    <label>名称1表示順</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>