force-app/main/default/objects/SpecialCalculationPattern__c/fields/Whereabouts__c.field-meta.xml
<CustomField>
    <fullName>Whereabouts__c</fullName>
    <label>所在</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>筐体</fullName>
            </value>
            <value>
                <fullName>明細</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>