force-app/main/default/objects/SpecialCalculationPattern__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SpecialCalculationTitle__c</columns>
    <columns>MajorClassificationCode__c</columns>
    <columns>MinorClassificationCode__c</columns>
    <columns>Whereabouts__c</columns>
    <columns>CategoryCode__c</columns>
    <columns>SpecialSpecificationNo__c</columns>
    <columns>SpecialSpecification__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>