force-app/main/default/objects/SpecialCalculationPattern__c/listViews/Facility.listView-meta.xml
<ListView>
    <fullName>Facility</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>SpecialCalculationTitle__c</columns>
    <columns>MajorClassificationCode__c</columns>
    <columns>MinorClassificationCode__c</columns>
    <columns>Whereabouts__c</columns>
    <columns>CategoryCode__c</columns>
    <columns>SpecialSpecificationNo__c</columns>
    <columns>CalculationCategory__c</columns>
    <columns>SpecialSpecification__c</columns>
    <columns>No__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BU__c</field>
        <operation>equals</operation>
        <value>S</value>
    </filters>
    <filters>
        <field>SpecialCalculationTitle__c</field>
        <operation>equals</operation>
        <value>特高TR 植物油入</value>
    </filters>
    <label>施設用</label>
</ListView>